# WinConsoles

./: .gitignore  CMakeLists.txt  LibGoals.MD  LibraryInterface.MD  MakingDistributable.MD  SimpleLogger.h  WorkingNotes.MD
LibrarianResouces/: MakingDistributable.MD  SimpleLogger.cpp  oldSimpleLogger.cpp  oldSimpleLogger.h
LibrarianResouces/ConsoleProcessPrototype/: CMakeLists.txt  console.cpp  console2.cpp  parent.cpp  parent2.cpp
LibrarianResouces/ConsoleProcessPrototype2/: CMakeLists.txt  console.cpp  parent.cpp
LibrarianResouces/ConsoleProcessPrototype3/: CMakeLists.txt  ConsoleInterface.MD  WorkingNotes.MD  console.cpp  main.cpp  parent.cpp
LibrarianResouces/ConsoleProcessPrototype4/: CMakeLists.txt  Win32Helpers.cpp  Win32Helpers.h  WorkingNotes.MD  new_console.cpp  new_parent.cpp
LibrarianResouces/FreeAndAttachConsoles/: CMakeLists.txt  console.cpp  dummy.cpp
LibrarianResouces/ParentWithChildsStdStreams/: CMakeLists.txt  console.cpp  parent.cpp
LibrarianResouces/asyncIssueInvestigation/: CMakeLists.txt  main.cpp
LibrarianResouces/inheritHanldesPracctice/: CMakeLists.txt  child.cpp  parent.cpp
LibrarianResouces/testAsyncConOutput/: CMakeLists.txt  main.cpp
LibrarianResouces/testReplicatingEof/: CMakeLists.txt  main.cpp  text.txt
TestCmakeAsLiteral/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.prototype.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  embeddedCmake.sln  testProg.cpp  testProg.sln  testProg.vcxproj  testProg.vcxproj.filters  theLib.cpp  theLib.hpp  theLib.vcxproj  theLib.vcxproj.filters
TestCmakeAsLiteral/Debug/: theLib.lib
TestCmakeAsLiteral/RuntimeCompiledProg/: CMakeLists.txt  someProg.cpp
TestCmakeAsLiteral/RuntimeCompiledProg/src/: CMakeLists.txt
TestCmakeAsLiteral/testProg.dir/Debug/: testProg.exe.recipe  testProg.ilk
TestCmakeAsLiteral/testProg.dir/Debug/testProg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TestCmakeAsLiteral/theLib.dir/Debug/theLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  theLib.lastbuildstate
TestCmakeAsLiteral/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
TestCmakeAsLiteral/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
TestCmakeAsLiteral/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
TestCmakeAsLiteral/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: CMakeLists.txt  Cistream.cpp  Cistream.h  Console.cpp  Console.h  ConsoleLoc.h  Costream.cpp  Costream.h  Cstream.h  SimpleLogger.cpp  Win32Helper.cpp  Win32Helpers.cpp  Win32Helpers.h  WinConsoles.cpp  WinConsoles.h  WinConsolesImpl.cpp  WinConsolesImpl.h
src/ConsoleProcess/: CMakeLists.txt  ConsoleInterface.MD  console.cpp
src/OldSrc/: WinConsolesImpl.cpp  WinConsolesImpl.h
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  GenericUseTest.cpp
